--- a/Project/proj.ipynb
+++ b/Project/proj.ipynb
@@ -33,12 +33,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from getpass import getpass, getuser\n",
-    "from syslog import LOG_LOCAL1\n",
-    "from numpy import save\n",
-    "from pyrsistent import l\n",
-    "\n",
-    "\n",
     "List of variables used\n",
     "conn\n",
     "c\n",
@@ -78,12 +72,16 @@
     "\n",
     "#sign in screen\n",
     "l5#usesrname label\n",
-    "l6#password label"
+    "l6#password label\n",
+    "\n",
+    "#Order page\n",
+    "l7 \n",
+    "l8 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,12 +103,22 @@
     "Radiobutton(window,text=\"hello\",variable=r,value=\"hello\").pack()\n",
     "mylabel=Label(window,text=r.get()).pack()\n",
     "\n",
+    "\n",
+    "def new():\n",
+    "    for widget in window.winfo_children():\n",
+    "            widget.destroy()\n",
+    "    window.geometry(\"300x120\")\n",
+    "    newl=Label(window,text=\"This is the next page\")\n",
+    "    newl.pack()\n",
+    "\n",
+    "next=Button(window,text=\"Next Page\",command=new)\n",
+    "next.pack()\n",
     "window.mainloop()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,17 +142,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pkgutil import extend_path\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import tkinter\n",
-    "from tkinter import *\n",
+    "\n",
+    "from cProfile import label\n",
+    "from functools import partial\n",
     "import sqlite3\n",
+    "import hashlib\n",
+    "\n",
+    "import tkinter as tk\n",
+    "from tkinter import CENTER, Button, Entry, Label, Tk, filedialog, Text\n",
+    "from tkinter import *\n",
+    "import os\n",
+    "from tkinter import simpledialog\n",
+    "\n",
+    "from matplotlib.pyplot import show\n",
+    "from numpy import size\n",
     "\n",
     "#home screen\n",
     "home=Tk()\n",
@@ -152,28 +167,44 @@
     "home.geometry(\"500x300\")\n",
     "lab = Label(home, text = \"Welcome to Aadi's Pizzeria\")\n",
     "lab.pack()\n",
-    "SI=Button(home,text=\"Sign in\")\n",
+    "SI=Button(home,text=\"Sign in\",command=orderwin)\n",
     "SU=Button(home,text=\"Sign up\",command=suw)\n",
     "SU.pack()\n",
     "SI.pack()\n",
     "\n",
-    "#Sign up Window\n",
-    "def suw():\n",
-    "    signupwin=Toplevel()\n",
-    "    signupwin.geometry(\"500x300\")\n",
-    "    signupwin.title(\"Create Account\")\n",
-    "    \n",
-    "    #Text box to enter user details\n",
-    "    l1=Label(signupwin,text=\"Enter Username: \").pack()\n",
-    "    username=Entry(signupwin).pack()\n",
-    "    l2=Label(signupwin,text=\"Enter Password: \").pack()\n",
-    "    password=Entry(signupwin).pack()\n",
-    "    l3=Label(signupwin,text=\"Re-enter your password: \").pack()\n",
-    "    repass=Entry(signupwin).pack()\n",
-    "    l4=Label(signupwin,text=\"Enter your Phone Number: \").pack()\n",
-    "    ph=Entry(signupwin).pack()\n",
-    "    \n",
+    "#Order Window\n",
+    "def orderwin():\n",
+    "    for widget in home.winfo_children():\n",
+    "            widget.destroy()\n",
+    "    home.geometry(\"500x300\")\n",
+    "    home.title(\"Order Your Pizza\")\n",
     "\n",
+    "    orderfont=(\"\",20,\"bold\")\n",
+    "    l7=Label(home,text=\"Order Your Pizza\",anchor=\"center\",font=orderfont)\n",
+    "    l7.pack()\n",
+    "\n",
+    "    sizefont=(\"\",14,\"\")\n",
+    "    l8=Label(home,text=\"Size\",anchor=\"center\",font=sizefont)\n",
+    "    l8.pack()\n",
+    "\n",
+    "    r=StringVar()\n",
+    "    #r.set()\n",
+    "    a=Radiobutton(home,text=\"Small (₹99)\",variable=r,value=99,anchor=\"w\")\n",
+    "    a.deselect()\n",
+    "    a.pack()\n",
+    "    b=Radiobutton(home,text=\"Medium (₹199)\",variable=r,value=199,anchor=\"center\")\n",
+    "    b.deselect()\n",
+    "    b.pack()\n",
+    "    c=Radiobutton(home,text=\"Large (₹399)\",variable=r,value=399,anchor=\"e\")\n",
+    "    c.deselect()\n",
+    "    c.pack()\n",
+    "\n",
+    "    toppingfont=(\"\",14,\"\")\n",
+    "    l9=Label(home,text=\"Toppings\",anchor=\"center\",font=toppingfont)\n",
+    "    l9.pack()\n",
+    "\n",
+    "    placeorder=Button(home,text=\"Place Order\")\n",
+    "    placeorder.pack()\n",
     "\n",
     "\n",
     "\n",
@@ -183,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +251,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.execute(\"SELECT * FROM User WHERE Username='kart'\")\n",
+    "data=c.fetchall()\n",
+    "conn.commit()\n",
+    "print(data[0][3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,10 +338,40 @@
     "si_password=Entry(home)\n",
     "si_password.pack()\n",
     "\n",
-    "SI=Button(home,text=\"Sign in\",command=check)\n",
-    "SI.pack()\n",
-    "SU=Button(home,text=\"Sign up\",command=suw)\n",
-    "SU.pack()\n",
+    "#Order Window\n",
+    "def orderwin():\n",
+    "    for widget in home.winfo_children():\n",
+    "            widget.destroy()\n",
+    "    home.geometry(\"500x300\")\n",
+    "    home.title(\"Order Your Pizza\")\n",
+    "\n",
+    "    orderfont=(\"\",20,\"bold\")\n",
+    "    l7=Label(home,text=\"Order Your Pizza\",anchor=\"center\",font=orderfont)\n",
+    "    l7.pack()\n",
+    "\n",
+    "    sizefont=(\"\",14,\"\")\n",
+    "    l8=Label(home,text=\"Size\",anchor=\"center\",font=sizefont)\n",
+    "    l8.pack()\n",
+    "\n",
+    "    r=StringVar()\n",
+    "    #r.set()\n",
+    "    a=Radiobutton(home,text=\"Small (₹99)\",variable=r,value=99,anchor=\"w\")\n",
+    "    a.deselect()\n",
+    "    a.pack()\n",
+    "    b=Radiobutton(home,text=\"Medium (₹199)\",variable=r,value=199,anchor=\"center\")\n",
+    "    b.deselect()\n",
+    "    b.pack()\n",
+    "    c=Radiobutton(home,text=\"Large (₹399)\",variable=r,value=399,anchor=\"e\")\n",
+    "    c.deselect()\n",
+    "    c.pack()\n",
+    "\n",
+    "    toppingfont=(\"\",14,\"\")\n",
+    "    l9=Label(home,text=\"Toppings\",anchor=\"center\",font=toppingfont)\n",
+    "    l9.pack()\n",
+    "\n",
+    "    placeorder=Button(home,text=\"Place Order\")\n",
+    "    placeorder.pack()\n",
+    "\n",
     "\n",
     "\n",
     "#Sign up Window\n",
@@ -329,6 +402,7 @@
     "    l4.pack()\n",
     "    ph=Entry(signupwin)\n",
     "    ph.pack()\n",
+    "    \n",
     "\n",
     "    #saving Details to database\n",
     "    def save():\n",
@@ -358,38 +432,23 @@
     "def check():\n",
     "    getluser=si_username.get()\n",
     "    getlpass=si_password.get()\n",
-    "    c.execute(\"SELECT Username from User\")\n",
-    "    usdata=c.fetchall()\n",
-    "    c.execute(\"SELECT Username from User\")\n",
-    "    passdata=c.fetchall()\n",
+    "    c.execute(\"SELECT * from User WHERE Username=(?)\",(getluser,))\n",
+    "    data=c.fetchall()\n",
     "    conn.commit()\n",
-    "    if getluser==usdata and getlpass==passdata:\n",
-    "        suclbl=Label(home,text=\"Success!\")\n",
-    "        suclbl.pack()\n",
+    "    if getlpass==data[0][3]:\n",
+    "        #suclbl=Label(home,text=\"Success!\")\n",
+    "        #suclbl.pack()\n",
+    "        orderwin()\n",
     "    else:\n",
     "        elbl1=Label(home,text=\"Invalid Credentials\")\n",
     "        elbl1.pack()\n",
+    "\n",
+    "SI=Button(home,text=\"Sign in\",command=check)\n",
+    "SI.pack()\n",
+    "SU=Button(home,text=\"Sign up\",command=suw)\n",
+    "SU.pack()\n",
+    "\n",
     "home.mainloop()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "yes\n"
-     ]
-    }
-   ],
-   "source": [
-    "c.execute(\"SELECT * FROM User WHERE Username='kart'\")\n",
-    "data=c.fetchall()\n",
-    "conn.commit()\n",
-    "print(data[0][3])"
    ]
   }
  ],
