--- a/Project/proj.ipynb
+++ b/Project/proj.ipynb
@@ -81,189 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tkinter \n",
-    "from tkinter import *\n",
-    "\n",
-    "window=Tk()\n",
-    "window.geometry(\"500x500\")\n",
-    "window.title(\"Hello\")\n",
-    "\n",
-    "\n",
-    "l1=Label(window,text='Hello good morning')\n",
-    "l1.pack_configure(anchor=CENTER)\n",
-    "l2=Label(window,text='This is another label')\n",
-    "l2.pack()\n",
-    "r=StringVar()\n",
-    "#r.set()\n",
-    "Radiobutton(window,text=\"hi\",variable=r,value=\"hi\").pack()\n",
-    "Radiobutton(window,text=\"hello\",variable=r,value=\"hello\").pack()\n",
-    "mylabel=Label(window,text=r.get()).pack()\n",
-    "\n",
-    "\n",
-    "def new():\n",
-    "    for widget in window.winfo_children():\n",
-    "            widget.destroy()\n",
-    "    window.geometry(\"300x120\")\n",
-    "    newl=Label(window,text=\"This is the next page\")\n",
-    "    newl.pack()\n",
-    "\n",
-    "next=Button(window,text=\"Next Page\",command=new)\n",
-    "next.pack()\n",
-    "window.mainloop()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tkinter \n",
-    "from tkinter import *\n",
-    "\n",
-    "window=Tk()\n",
-    "window.geometry(\"500x500\")\n",
-    "window.title(\"Hello\")\n",
-    "user=Entry(window)\n",
-    "user.pack()\n",
-    "def show():\n",
-    "    see=user.get()\n",
-    "    lbl=Label(window,text=see)\n",
-    "    lbl.pack()\n",
-    "btn=Button(window,text=\"Click Me\",command=show)\n",
-    "btn.pack()\n",
-    "\n",
-    "window.mainloop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "from cProfile import label\n",
-    "from functools import partial\n",
-    "import sqlite3\n",
-    "import hashlib\n",
-    "\n",
-    "import tkinter as tk\n",
-    "from tkinter import CENTER, Button, Entry, Label, Tk, filedialog, Text\n",
-    "from tkinter import *\n",
-    "import os\n",
-    "from tkinter import simpledialog\n",
-    "\n",
-    "from matplotlib.pyplot import show\n",
-    "from numpy import size\n",
-    "\n",
-    "#home screen\n",
-    "home=Tk()\n",
-    "home.title(\"Aadi's Pizzeria\")\n",
-    "home.geometry(\"500x300\")\n",
-    "lab = Label(home, text = \"Welcome to Aadi's Pizzeria\")\n",
-    "lab.pack()\n",
-    "SI=Button(home,text=\"Sign in\",command=orderwin)\n",
-    "SU=Button(home,text=\"Sign up\",command=suw)\n",
-    "SU.pack()\n",
-    "SI.pack()\n",
-    "\n",
-    "#Order Window\n",
-    "def orderwin():\n",
-    "    for widget in home.winfo_children():\n",
-    "            widget.destroy()\n",
-    "    home.geometry(\"500x300\")\n",
-    "    home.title(\"Order Your Pizza\")\n",
-    "\n",
-    "    orderfont=(\"\",20,\"bold\")\n",
-    "    l7=Label(home,text=\"Order Your Pizza\",anchor=\"center\",font=orderfont)\n",
-    "    l7.pack()\n",
-    "\n",
-    "    sizefont=(\"\",14,\"\")\n",
-    "    l8=Label(home,text=\"Size\",anchor=\"center\",font=sizefont)\n",
-    "    l8.pack()\n",
-    "\n",
-    "    r=StringVar()\n",
-    "    #r.set()\n",
-    "    a=Radiobutton(home,text=\"Small (₹99)\",variable=r,value=99,anchor=\"w\")\n",
-    "    a.deselect()\n",
-    "    a.pack()\n",
-    "    b=Radiobutton(home,text=\"Medium (₹199)\",variable=r,value=199,anchor=\"center\")\n",
-    "    b.deselect()\n",
-    "    b.pack()\n",
-    "    c=Radiobutton(home,text=\"Large (₹399)\",variable=r,value=399,anchor=\"e\")\n",
-    "    c.deselect()\n",
-    "    c.pack()\n",
-    "\n",
-    "    toppingfont=(\"\",14,\"\")\n",
-    "    l9=Label(home,text=\"Toppings\",anchor=\"center\",font=toppingfont)\n",
-    "    l9.pack()\n",
-    "\n",
-    "    placeorder=Button(home,text=\"Place Order\")\n",
-    "    placeorder.pack()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "home.mainloop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from msilib.schema import Font\n",
-    "from pkgutil import extend_path\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import tkinter\n",
-    "from tkinter import *\n",
-    "import sqlite3\n",
-    "\n",
-    "#sign in window\n",
-    "signinwin=Toplevel()\n",
-    "signinwin.geometry(\"500x300\")\n",
-    "signinwin.title(\"Sign in\")\n",
-    "\n",
-    "#Entering user details\n",
-    "l5=Label(signinwin,text=\"Enter Username: \")\n",
-    "l5.pack()\n",
-    "si_username=Entry(signinwin)\n",
-    "si_username.pack()\n",
-    "l6=Label(signinwin,text=\"Enter Password: \")\n",
-    "l6.pack()\n",
-    "si_password=Entry(signinwin)\n",
-    "si_password.pack()\n",
-    "\n",
-    "#sign in button\n",
-    "\n",
-    "home.mainloop()\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c.execute(\"SELECT * FROM User WHERE Username='kart'\")\n",
-    "data=c.fetchall()\n",
-    "conn.commit()\n",
-    "print(data[0][3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +91,7 @@
     "HU21CSEN0100580\n",
     "amuktava@gitam.in\n",
     "'''\n",
-    "from msilib.schema import Font\n",
+    "from msilib.schema import CheckBox, Font\n",
     "from pkgutil import extend_path\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -342,7 +160,7 @@
     "def orderwin():\n",
     "    for widget in home.winfo_children():\n",
     "            widget.destroy()\n",
-    "    home.geometry(\"500x300\")\n",
+    "    home.geometry(\"700x400\")\n",
     "    home.title(\"Order Your Pizza\")\n",
     "\n",
     "    orderfont=(\"\",20,\"bold\")\n",
@@ -353,6 +171,7 @@
     "    l8=Label(home,text=\"Size\",anchor=\"center\",font=sizefont)\n",
     "    l8.pack()\n",
     "\n",
+    "    #Size of the pizza base\n",
     "    r=StringVar()\n",
     "    #r.set()\n",
     "    a=Radiobutton(home,text=\"Small (₹99)\",variable=r,value=99,anchor=\"w\")\n",
@@ -365,11 +184,43 @@
     "    c.deselect()\n",
     "    c.pack()\n",
     "\n",
+    "    #Choice of toppings\n",
     "    toppingfont=(\"\",14,\"\")\n",
     "    l9=Label(home,text=\"Toppings\",anchor=\"center\",font=toppingfont)\n",
     "    l9.pack()\n",
     "\n",
-    "    placeorder=Button(home,text=\"Place Order\")\n",
+    "    #Non Veg\n",
+    "    sau=StringVar()\n",
+    "    s=Checkbutton(home,text=\"Sausage (₹40)\",variable=sau,onvalue=40)\n",
+    "    s.deselect()\n",
+    "    s.pack()\n",
+    "    chi=StringVar()\n",
+    "    chick=Checkbutton(home,text=\"Chicken (₹40)\",variable=chi,onvalue=40)\n",
+    "    chick.deselect()\n",
+    "    chick.pack()\n",
+    "    pe=StringVar()\n",
+    "    pep=Checkbutton(home,text=\"Pepperoni (₹40)\",variable=pe,onvalue=40)\n",
+    "    pep.deselect()\n",
+    "    pep.pack()\n",
+    "\n",
+    "    #Veg\n",
+    "    exch=StringVar()\n",
+    "    ec=Checkbutton(home,text=\"Extra Cheese (₹35)\",variable=exch,onvalue=35)\n",
+    "    ec.deselect()\n",
+    "    ec.pack()\n",
+    "    ol=StringVar()\n",
+    "    o=Checkbutton(home,text=\"Olives (₹35)\",variable=ol,onvalue=35)\n",
+    "    o.deselect()\n",
+    "    o.pack()\n",
+    "    jal=StringVar()\n",
+    "    j=Checkbutton(home,text=\"Jalepenos (₹35)\",variable=jal,onvalue=35)\n",
+    "    j.deselect()\n",
+    "    j.pack()\n",
+    "\n",
+    "    def place():\n",
+    "        show=Label(home,text=ol.get())\n",
+    "        show.pack()\n",
+    "    placeorder=Button(home,text=\"Place Order\",command=place)\n",
     "    placeorder.pack()\n",
     "\n",
     "\n",
@@ -417,7 +268,7 @@
     "        if getpass==getrepass:\n",
     "            c.execute(\"INSERT into User VALUES(?,?,?,?)\",values)\n",
     "            conn.commit()\n",
-    "            \n",
+    "            orderwin()\n",
     "                \n",
     "        else:\n",
     "            elbl=Label(signupwin,text=\"Passwords not Matching\")\n",
