--- a/Project/proj.ipynb
+++ b/Project/proj.ipynb
@@ -4,27 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pizza Ordering simulator\n",
-    "\n",
-    "Database of different pizas with choice of size,crust and toppings\n",
-    "\n",
-    "selection interface\n",
-    "\n",
-    "Bill file\n",
-    "\n",
-    "three sizes small medium large\n",
-    "\n",
-    "toppings-chicken, olives, extra cheese, jalepenos, Pepperoni,Sausage\n",
-    "user can choose max 3 toppings\n",
-    "\n",
-    "user table in sqlite\n",
-    "price table in sqlite\n",
-    "create user\n",
-    "login\n",
-    "order\n",
-    "\n",
-    "\n",
-    "\n"
+    "This is a Pizza Ordering Simulator that I made using Python and Tkinter.\n",
+    "I have used sqlite to create the user table.\n",
+    "The user can choose from three different sizes and six different toppings.\n",
+    "This is a basic project that I made and there is definitely scope for improvement."
    ]
   },
   {
@@ -91,6 +74,8 @@
     "HU21CSEN0100580\n",
     "amuktava@gitam.in\n",
     "'''\n",
+    "from ast import Lambda\n",
+    "from getpass import getuser\n",
     "from msilib.schema import CheckBox, Font\n",
     "from pkgutil import extend_path\n",
     "import pandas as pd\n",
@@ -107,28 +92,6 @@
     "c=conn.cursor()\n",
     "\n",
     "#Table Creation\n",
-    "\n",
-    "#Pricing Table\n",
-    "c.execute(\"\"\"\n",
-    "            CREATE TABLE IF NOT EXISTS Pricing(\"S.No\" int,\n",
-    "            \"Base/Topping\" text,\"Price\" text)\n",
-    "            \"\"\")\n",
-    "\n",
-    "#Price dictionary\n",
-    "price = {'Sausage': \"₹40\", 'Pepperoni': \"₹40\", 'Chicken': \"₹40\", 'Olives': \"₹35\",'Extra Cheese':'₹30','Jalepenos':\"₹35\"}\n",
-    "#Entering Values in Pricing Table\n",
-    "pricevalues=[\n",
-    "    (\"1\",\"Small\",\"₹99\"),\n",
-    "    (\"2\",\"Medium\",\"₹199\"),\n",
-    "    (\"3\",\"Large\",\"₹399\"),\n",
-    "    (\"4\",\"Olives\",\"₹35\"),\n",
-    "    (\"5\",\"Chicken\",\"₹40\"),\n",
-    "    (\"6\",\"Jalepenos\",\"₹35\"),\n",
-    "    (\"7\",\"Pepperoni\",\"₹40\"),\n",
-    "    (\"8\",\"Sausage\",\"₹40\"),\n",
-    "    (\"9\",\"Extra Cheese\",\"30\")\n",
-    "]\n",
-    "#c.executemany(\"INSERT into Pricing VALUES(?,?,?)\",pricevalues)\n",
     "\n",
     "#User Table\n",
     "c.execute(\"\"\"\n",
@@ -153,14 +116,14 @@
     "si_username.pack()\n",
     "l6=Label(home,text=\"Enter Password: \")\n",
     "l6.pack()\n",
-    "si_password=Entry(home)\n",
+    "si_password=Entry(home,show=\"*\")\n",
     "si_password.pack()\n",
     "\n",
     "#Order Window\n",
     "def orderwin():\n",
     "    for widget in home.winfo_children():\n",
     "            widget.destroy()\n",
-    "    home.geometry(\"700x400\")\n",
+    "    home.geometry(\"700x550\")\n",
     "    home.title(\"Order Your Pizza\")\n",
     "\n",
     "    orderfont=(\"\",20,\"bold\")\n",
@@ -171,55 +134,80 @@
     "    l8=Label(home,text=\"Size\",anchor=\"center\",font=sizefont)\n",
     "    l8.pack()\n",
     "\n",
+    "    #Empty list to store and add prices\n",
+    "    total=[]\n",
     "    #Size of the pizza base\n",
+    "    def basesize():\n",
+    "        sizelabel=Label(home,text=r.get())\n",
+    "        sizelabel.pack()\n",
+    "        if r.get()==\"Small\":\n",
+    "            total.append(99)\n",
+    "            #print(total)\n",
+    "        elif r.get()==\"Medium\":\n",
+    "            total.append(199)\n",
+    "            #print(total)\n",
+    "        elif r.get()==\"Large\":\n",
+    "            total.append(399)\n",
+    "            #print(total)\n",
+    "    \n",
     "    r=StringVar()\n",
-    "    #r.set()\n",
-    "    a=Radiobutton(home,text=\"Small (₹99)\",variable=r,value=99,anchor=\"w\")\n",
-    "    a.deselect()\n",
-    "    a.pack()\n",
-    "    b=Radiobutton(home,text=\"Medium (₹199)\",variable=r,value=199,anchor=\"center\")\n",
-    "    b.deselect()\n",
-    "    b.pack()\n",
-    "    c=Radiobutton(home,text=\"Large (₹399)\",variable=r,value=399,anchor=\"e\")\n",
-    "    c.deselect()\n",
-    "    c.pack()\n",
+    "    r.set('Small')\n",
+    "    Radiobutton(home,text=\"Small (₹99)\",variable=r,value=\"Small\",command=basesize).pack()\n",
+    "    Radiobutton(home,text=\"Medium (₹199)\",variable=r,value=\"Medium\",command=basesize).pack()\n",
+    "    Radiobutton(home,text=\"Large (₹399)\",variable=r,value=\"Large\",command=basesize).pack()\n",
+    "   \n",
     "\n",
     "    #Choice of toppings\n",
     "    toppingfont=(\"\",14,\"\")\n",
     "    l9=Label(home,text=\"Toppings\",anchor=\"center\",font=toppingfont)\n",
     "    l9.pack()\n",
     "\n",
-    "    #Non Veg\n",
-    "    sau=StringVar()\n",
-    "    s=Checkbutton(home,text=\"Sausage (₹40)\",variable=sau,onvalue=40)\n",
-    "    s.deselect()\n",
-    "    s.pack()\n",
-    "    chi=StringVar()\n",
-    "    chick=Checkbutton(home,text=\"Chicken (₹40)\",variable=chi,onvalue=40)\n",
-    "    chick.deselect()\n",
-    "    chick.pack()\n",
-    "    pe=StringVar()\n",
-    "    pep=Checkbutton(home,text=\"Pepperoni (₹40)\",variable=pe,onvalue=40)\n",
-    "    pep.deselect()\n",
-    "    pep.pack()\n",
+    "    toppings=[\n",
+    "        (\"Sausage (₹40)\",\"Sausage\"),\n",
+    "        (\"Chicken (₹40)\",\"Chicken\"),\n",
+    "        (\"Pepperoni (₹40)\",\"Pepperoni\"),\n",
+    "        (\"Extra Cheese (₹35)\",\"Extra Cheese\"),\n",
+    "        (\"Olives (₹35)\",\"Olives\"),\n",
+    "        (\"Jalepenos (₹35)\",\"Jalepenos\")\n",
+    "    ]\n",
+    "    top=StringVar()\n",
+    "    top.set(\"Sausage\")\n",
     "\n",
-    "    #Veg\n",
-    "    exch=StringVar()\n",
-    "    ec=Checkbutton(home,text=\"Extra Cheese (₹35)\",variable=exch,onvalue=35)\n",
-    "    ec.deselect()\n",
-    "    ec.pack()\n",
-    "    ol=StringVar()\n",
-    "    o=Checkbutton(home,text=\"Olives (₹35)\",variable=ol,onvalue=35)\n",
-    "    o.deselect()\n",
-    "    o.pack()\n",
-    "    jal=StringVar()\n",
-    "    j=Checkbutton(home,text=\"Jalepenos (₹35)\",variable=jal,onvalue=35)\n",
-    "    j.deselect()\n",
-    "    j.pack()\n",
+    "    def topprice():\n",
+    "        toplabel=Label(home,text=top.get())\n",
+    "        toplabel.pack()\n",
+    "        if top.get()==\"Sausage\":\n",
+    "            total.append(40)\n",
+    "            #print(total)\n",
+    "        elif top.get()==\"Chicken\":\n",
+    "            total.append(40)\n",
+    "            #print(total)\n",
+    "        elif top.get()==\"Pepperoni\":\n",
+    "            total.append(40)\n",
+    "            #print(total)\n",
+    "        elif top.get()==\"Extra Cheese\":\n",
+    "            total.append(35)\n",
+    "            #print(total)\n",
+    "        elif top.get()==\"Olives\":\n",
+    "            total.append(35)\n",
+    "            #print(total)\n",
+    "        elif top.get()==\"Jalepenos\":\n",
+    "            total.append(35)\n",
+    "            #print(total)\n",
+    "\n",
+    "    for text,cost in toppings:\n",
+    "        Radiobutton(home,text=text,variable=top,value=cost,command=topprice).pack()\n",
+    " \n",
     "\n",
     "    def place():\n",
-    "        show=Label(home,text=ol.get())\n",
-    "        show.pack()\n",
+    "        p=0\n",
+    "        for i in range(0,len(total)):\n",
+    "            p+=total[i]\n",
+    "        #print(p)\n",
+    "        confirm=Label(home,text=\"Your Order has been Confirmed! Your total is: ₹\").pack()\n",
+    "        confirmp=Label(home,text=p).pack()\n",
+    "        thanks=Label(home,text=\"Thank You for ordering!\").pack()\n",
+    "\n",
     "    placeorder=Button(home,text=\"Place Order\",command=place)\n",
     "    placeorder.pack()\n",
     "\n",
@@ -286,7 +274,7 @@
     "    c.execute(\"SELECT * from User WHERE Username=(?)\",(getluser,))\n",
     "    data=c.fetchall()\n",
     "    conn.commit()\n",
-    "    if getlpass==data[0][3]:\n",
+    "    if getlpass==data[0][3] or getuser==data[0][1]:\n",
     "        #suclbl=Label(home,text=\"Success!\")\n",
     "        #suclbl.pack()\n",
     "        orderwin()\n",
